kube/chroma.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semantic-searcher-chroma
  namespace: semantic-searcher
  labels:
    app: semantic-searcher-chroma
    app.kubernetes.io/name: semantic-searcher-chroma
    app.kubernetes.io/component: chroma
    app.kubernetes.io/part-of: "semantic-searcher"
    app.kubernetes.io/version: "1.0.0"
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: "v3"
  annotations:
    app.openshift.io/vcs-uri: "https://github.com/jkeam/semantic-searcher.git"
    app.openshift.io/vcs-ref: "main"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semantic-searcher-chroma
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: semantic-searcher-chroma
    spec:
      containers:
        - image: quay.io/jkeam/chroma:latest
          imagePullPolicy: Always
          name: semantic-searcher-chroma
          ports:
          - containerPort: 8000
            name: theport
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
              - ALL
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: semantic-searcher-chroma
  namespace: semantic-searcher
  labels:
    app: semantic-searcher-chroma
spec:
  ports:
    - name: port8000
      port: 8000
      targetPort: 8000
  type: ClusterIP
  selector:
    app: semantic-searcher-chroma
