kube/database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semantic-searcher-database
  namespace: semantic-searcher
  labels:
    app: semantic-searcher-database
    app.kubernetes.io/name: semantic-searcher-database
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: "semantic-searcher"
    app.kubernetes.io/version: "1.0.0"
    app.openshift.io/runtime: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semantic-searcher-database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: semantic-searcher-database
    spec:
      containers:
        - image: registry.redhat.io/rhel9/postgresql-15@sha256:410041a14a3064d020bf2ec8572c2d62cdcd824550cb8d67cbd072743d0123c0
          imagePullPolicy: Always
          name: semantic-searcher-database
          ports:
          - containerPort: 5432
            name: theport
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
              - ALL
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: semantic-searcher-database
  namespace: semantic-searcher
  labels:
    app: semantic-searcher-database
spec:
  ports:
    - name: port5432
      port: 5432
      targetPort: 5432
  type: ClusterIP
  selector:
    app: semantic-searcher-database
